sumo/tests/sumo/errors/traffic_lights/initial_phase_shorter/errors.sumo
Error: Invalid linkIndex '11' in connection controlled by '0'
Quitting (on error).
